<resources>
    <string name="app_name">Parlathon</string>
    <string name="default_description">Default description</string>
    <string name="cookie">Cookie</string>
    <string name="label_procurar">Procurar</string>
    <string name="hint_search_field">Proposição, parlamentar ou partido</string>
    <string name="label_proposicoes">Projetos de Lei da Câmara</string>
    <string name="label_ver_mais">ver mais</string>
    <string name="default_content_description">Default content description</string>
    <string name="info_tramitacoes_label">Entenda o fluxo das proposições</string>
    <string name="label_parlamentares">Parlamentares</string>
    <string name="label_partidos">Partidos</string>
    <string name="ouvir_transcrito_da_imagem">Ouvir transcrito da imagem</string>
    <string name="label_despacho">Despacho</string>
    <string name="label_orgao">Órgão: </string>
    <string name="lorem_ipsum">LOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASODLOREM IPSUM DOLOR ARMET SFDOAIJFSODIFJAODSIJFAOSDIJFAODISJFOAIJFAOIFJAOIJSDFAOSIJFASOD</string>
    <string name="visualizar_na_ntegra">Mostrar na Íntegra</string>
    <string name="label_timeline">Linha do tempo</string>
    <string name="label_prop_relacionadas">Proposições Relacionadas</string>
    <string name="label_sem_prop_relacionadas">Não há proposições relacionadas</string>
    <string name="tipo_label">Tipo</string>
    <string name="origem_label">Origem</string>
    <string name="tramit_label">Tramitação</string>
    <string name="data_label">Data</string>
    <string name="autor_label">Autor</string>
    <string name="regime_label">Regime</string>
    <string name="autores_head">Autores</string>
    <string name="label_mais_info">Mais informações</string>
    <string name="label_movimentacoes">Movimentações</string>
    <string name="label_visualizar_mov">Visualizar Movimentações</string>
    <string name="label_pl_senado">Projetos de Lei do Senado</string>
    <string name="label_assunto">Assunto</string>
    <string name="label_transformado">O Projeto de Lei foi transformado em:</string>
    <string name="label_ementa">Ementa:</string>
    <string name="tipo_prompt">Tipo</string>
    <string name="pesquisar_label">Pesquisa</string>
    <string name="resultados_label">Resultados</string>
</resources>
